Stretch goal: fix navbar to top of display and change background color

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -67,7 +67,7 @@ h1, h2, h3, h4, h5 {
 
 /* default */
 body {
-	padding-top: 20px;
+	padding-top: 50px;
 }
 
 a {
@@ -82,9 +82,12 @@ a {
 
 /* nav */
 .navbar {
+	background-color: dodgerblue;
 	padding: 10px 0px;
 	width: 100%;
-	position: relative;
+	position: fixed;
+	top: 0;
+	z-index: 1;
 }
 
 .navbar nav {
